# OpenGL_Project_Template

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: glad.c.1A9DF9AB6F59EA74.idx  glad.h.1D8D5FAC7C954354.idx  main.cpp.4B6349FD7F2F705E.idx
include/glad/: glad.h
src/: glad.c  main.cpp
